# ros-v2x-benchmarking-suite

./: .dockerignore  .gitignore  .gitmodules  .style.yapf  CITATION.cff  CONFIGURATION.md  DEVELOPMENT.md  EXPERIMENTS.md  README.md
docker/: Dockerfile  entrypoint.sh
rosbags/: single_packet.bag
src/benchmarking_suite/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/benchmarking_suite/action/: Experiment.action
src/benchmarking_suite/cfg/: params_BenchmarkIO.cfg  params_ObjectDetection.cfg
src/benchmarking_suite/include/: BenchmarkIO.h  ObjectDetection.h  timestamps.h
src/benchmarking_suite/launch/: benchmark_in_vehicle.launch  benchmark_mqtt_bridge.launch  benchmark_mqtt_client.launch  benchmark_overlay.launch
src/benchmarking_suite/launch/components/: benchmark_io.launch  metrics_logger.launch  mqtt_bridge.launch  mqtt_client.launch  object_detection.launch  packets2pointcloud.launch  plot.launch  rosbag.launch
src/benchmarking_suite/msg/: Metrics.msg  Object.msg  TimeStamped.msg
src/benchmarking_suite/params/: benchmark_io.yaml  metrics_logger_in_vehicle.yaml  metrics_logger_mqtt_interface.yaml  metrics_logger_mqtt_interface_transmission-only.yaml  mqtt_bridge_cloud.yaml  mqtt_bridge_vehicle_packets.yaml  mqtt_bridge_vehicle_packets_transmission-only.yaml  mqtt_bridge_vehicle_pointcloud.yaml  mqtt_client_cloud.yaml  mqtt_client_vehicle_packets.yaml  mqtt_client_vehicle_packets_transmission-only.yaml  mqtt_client_vehicle_pointcloud.yaml  object_detection.yaml  vlp32.yaml
src/benchmarking_suite/params/mosquitto/: mosquitto.conf
src/benchmarking_suite/params/mosquitto_ssl/: mosquitto.conf  mosquitto.credentials
src/benchmarking_suite/params/mosquitto_ssl/ssl/: ca-cert.pem  ca-cert.srl  ca-key.pem  cert.pem  csr.pem  key.pem
src/benchmarking_suite/src/: BenchmarkIO.cpp  MetricsLogger.py  ObjectDetection.cpp
